tests/build/fail/widget/module_path_malformed3.stderr
error: expected `crate`
 --> $DIR/module_path_malformed3.rs:4:11
  |
4 | #[widget($self::widget)]
  |           ^^^^
